@@ -12,6 +12,7 @@ version 0.45:
 	* Tab-completion for nicks in chat (thanks to Sean Egan)
 	* Large internal reworkings
 	* New Protocol: Gadu-Gadu, written by Arkadiusz Miskiewicz
+	* Can choose buddy icon to send (for Oscar)
 
 version 0.44 (09/20/2001):
 	* More sane scaling of buddy icons (intelligently scale to
